# mgr

./: .gitignore  0_data_cleaning.ipynb  1_run_megadetector.ipynb  2_run_model.ipynb  2_train_model.ipynb  3_run_model.ipynb  3_statistics_plots.ipynb  4_statistics_plots.ipynb  README.md  compare_detectors.ipynb  deepfaune_detector_results.csv  diagram.drawio  evaluate_model.ipynb  evaluation_pipeline.ipynb  main.py.lnk  megadetector_raw.json  megadetector_results.csv  notebook.ipynb  notebook_check_results.ipynb  notebook_speciesnet.ipynb  pyproject.toml  pyproject.toml.lnk  requirements.txt  results.ipynb  results_unification.ipynb  run_megadetector.ipynb  test.ipynb  y_clean.csv  y_clean_thin.csv  zwierzeta.txt
data/: chernobyl_data.ipynb  inaturalist_data.ipynb  new_data.ipynb
deepfaune/: deepfaune_model.py  notebook.ipynb  notebook_deepfaune.ipynb  run_deepfaune.ipynb  run_deepfaune_yolov5.ipynb
deepfaune/results/: errors.txt  (+1 more)
detectors/: compare_detectors.ipynb
etc/: diagram.drawio
past_results/: correct.csv  results_deepfaune-yolov8s_960_vit_large_patch14_dinov2.lvd142m.csv  results_speciesnet.csv
results/: output_speciesnet.json  output_speciesnet_pl.json  output_speciesnet_pl_cleared.json  results_deepfaune-yolov8s_960_vit_large_patch14_dinov2.lvd142m_cropsize_280.csv  results_speciesnet_pl.csv  results_verified.csv
speciesnet/: notebook_speciesnet.ipynb  requirements.txt  run_speciesnet.ipynb  speciesnet_model.py
utils/: class_names.py  cropping.py  dataloaders.py  detector.py  download.py  enums.py  etc.py  image.py  predict.py  unification.py
(+35 files in other folders)
